# chunkgpt

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: communist_manifesto.txt  ipcc_summary_2023.txt
src/chunkgpt/: chunkgpt.py
src/chunkgpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
