[build-system]
requires = ["setuptools>=56.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chunkgpt"
version = "0.2.0"
authors = [
    { name="David Mays", email="maysidavid@gmail.com" },
]
description = "A lightweight library for summarizing text that surpasses the token limit of specific OpenAI GPT-based models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/dimays/chunkgpt"
"Bug Tracker" = "https://github.com/dimays/chunkgpt/issues"